@@ -341,7 +341,7 @@ static NSString *const kKeychainItemName = @"YouTubeSample: YouTube";
     va_end(argList);
   }
   NSBeginAlertSheet(title, nil, nil, nil, [self window], nil, nil,
-                    nil, nil, result);
+                    nil, nil, @"%@", result);
 }
 
 #pragma mark IBActions
